--- a/css/layout.css
+++ b/css/layout.css
@@ -4,67 +4,73 @@
 }
 /*page wrapper will be for every layout*/
 .page-wrapper{
-	background-color: yellow;
+	/*background-color: yellow;*/
 	width: 80%;
 	margin: 0px auto;
 }
 .header-wrapper{
-	background-color: blue;
+	background-color: #80dfff;
 }
 .top-header-wrapper{
-	background-color: #a00be5;
+	/*background-color: #a00be5;*/
 }
 .top-left-header{
 	/*background-color: #eee;*/
+	width: 70%;
 }
 .top-right-header{
-	background-color: red;
+	width: 30%;
+	text-align: right;
 }
 .bottom-header-wrapper{
-	background-color: #7f0723;
+	width: 100%;
+	background-color: #e1eaea;
 }
 .bottom-left-header{
-	background-color: lime;
+	background-color: transparent;
+	width: 70%;
 }
 .bottom-right-header{
-	background-color: #bebebebe;
+	background-color: transparent;
+	width: 30%;
 }
 .main-container{
-	background-color: green;
-	height: 500px;
+	background-color: white;
+	height: 520px;
 }
 .left-sidebar{
 	background-color: gray;
 	width: 20%;
-	height: 500px;
+	height: 480px;
 }
 .body-wrapper{
 	width: 80%;
-	height: 500px;
+	height: 480px;
 }
 .body-left-container{
-	background-color: black;
+	background-color:transparent; /* black;*/
 	width: 70%;
-	height: 500px;
+	height: 480px;
 }
 
 .body-right-sidebar{
 	background-color: brown;
 	width: 30%;
-	height: 500px;
+	height: 480px;
 }
 
+.footer-wrapper{
+	background-color: #666666;
+}
 .left-footer-wrapper{
-	background-color: #449927;
+	background-color: transparent; /*#449927;*/
 }
 .right-footer-wrapper{
-	background-color: #4c4f07;
+	background-color: transparent; /* #4c4f07;*/
 }
 
-.br-rounded{
-	border-radius: 5px;
+.main-container >.page-wrapper{
+	padding: 20px;
 }
 
-.pad-5{
-	padding: 5px;
-}
+
